fixup scrolling on ios

--- a/modules/topics-ui/browser/less/index.less
+++ b/modules/topics-ui/browser/less/index.less
@@ -18,8 +18,25 @@ html {
   .m-cover-screen();
   .m-grad-background();
   font-size: 62.5%;
+  -webkit-overflow-scrolling: touch;
 }
-body { .m-cover-screen(); font-size: 1.6rem; }
+
+body {
+  .m-cover-screen();
+  font-size: 1.6rem;
+}
+
+#app-root {
+  width: 100%;
+  height: 100%;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
 
 //Generic
 @import "./components/container";
